--- a/Pythonではじめる機械学習.ipynb
+++ b/Pythonではじめる機械学習.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "e2abf422",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "a6185af3",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "ced980c6",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "e9709d12",
    "metadata": {},
    "outputs": [
@@ -136,8 +136,30 @@
    "metadata": {},
    "source": [
     "#### 参考：Python, SciPy（scipy.sparse）で疎行列を生成・変換\n",
-    "https://note.nkmk.me/python-scipy-sparse-matrix-csr-csc-coo-lil/\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5352aa59",
+   "metadata": {},
+   "source": [
+    "https://note.nkmk.me/python-scipy-sparse-matrix-csr-csc-coo-lil/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3d53880",
+   "metadata": {},
+   "source": [
+    "##### SciPy（scipy.sparse）の疎行列クラスの種類\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d350337",
+   "metadata": {},
+   "source": [
     "データから疎行列を生成 → COO\n",
     "<br>\n",
     "算術演算や行列積計算 → CSR\n",
@@ -153,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "88ac1ce2",
    "metadata": {},
    "outputs": [],
@@ -163,16 +185,8 @@
     "l = [\n",
     "    [0, 10, 20],\n",
     "    [30, 0, 40],\n",
-    "    [0, 0, 50]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "2cde2aa6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    [0, 0, 50]]\n",
+    "\n",
     "data = [10, 20, 30, 40, 50]\n",
     "row = [0, 0, 1, 1, 2]\n",
     "col = [1, 2, 0, 2, 2]"
@@ -180,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "bf697e7a",
    "metadata": {},
    "outputs": [
@@ -213,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "id": "37e24cd9",
    "metadata": {},
    "outputs": [
@@ -247,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "16e6270b",
    "metadata": {},
    "outputs": [
@@ -280,17 +294,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d47e354b",
+   "id": "f8d6526c",
    "metadata": {},
    "source": [
-    "SciPyで疎行列を生成・変換\n",
-    "<br>\n",
-    "リスト、numpy.ndarrayと相互変換"
+    "##### SciPyで疎行列を生成・変換(リスト、numpy.ndarrayと相互変換)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 49,
    "id": "e7482db3",
    "metadata": {},
    "outputs": [
@@ -298,7 +310,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  (0, 1)\t10\n",
+      "リストから作成\n",
+      "   (0, 1)\t10\n",
       "  (0, 2)\t20\n",
       "  (1, 0)\t30\n",
       "  (1, 2)\t40\n",
@@ -308,18 +321,19 @@
     }
    ],
    "source": [
+    "# リストと相互変換\n",
     "l = [[0, 10, 20],\n",
     "     [30, 0, 40],\n",
     "     [0, 0, 0]]\n",
     "csr = csr_matrix(l)\n",
-    "print(csr)\n",
+    "print('リストから作成\\n', csr)\n",
     "print(type(csr))\n",
     "print(csr.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 53,
    "id": "354cc53c",
    "metadata": {},
    "outputs": [
@@ -327,48 +341,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "  (0, 0)\t1\n",
-      "  (0, 1)\t1\n",
-      "  (0, 2)\t2\n",
-      "(1, 3)\n"
+      "numpy配列\n",
+      " [[ 0 10 20]\n",
+      " [30  0 40]\n",
+      " [ 0  0  0]]\n",
+      "<class 'numpy.ndarray'>\n",
+      "numpyから作成\n",
+      "   (0, 1)\t10\n",
+      "  (0, 2)\t20\n",
+      "  (1, 0)\t30\n",
+      "  (1, 2)\t40\n"
      ]
     }
    ],
    "source": [
     "# numpy.ndarrayからscipy.sparseのクラスに変換\n",
-    "a = np.array(1)\n",
-    "print(a)\n",
+    "a = np.array(l)\n",
+    "print('numpy配列\\n', a)\n",
+    "print(type(a))\n",
+    "\n",
     "csr = csr_matrix(a)\n",
-    "print(csr)\n",
-    "print(csr_matrix([0, 1, 2]))\n",
-    "print(csr_matrix([0, 1, 2]).shape)\n"
+    "print('numpyから作成\\n', csr)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "c012378b",
+   "execution_count": 56,
+   "id": "47b57dca",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1]]\n",
-      "<class 'numpy.ndarray'>\n",
-      "[[1]]\n",
-      "<class 'numpy.matrix'>\n"
+      "1次元のリスト\n",
+      "   (0, 1)\t1\n",
+      "  (0, 2)\t2\n",
+      "(1, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1次元のリストやnumpy.ndarrayは1行の行列とみなされる。3次元以上だとエラー。\n",
+    "print('1次元のリスト\\n', csr_matrix([0, 1, 2]))\n",
+    "print(csr_matrix([0, 1, 2]).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "90de2223",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0 10 20]\n",
+      " [30  0 40]\n",
+      " [ 0  0  0]]\n",
+      "<class 'scipy.sparse.csr.csr_matrix'>\n"
      ]
     }
    ],
    "source": [
     "# scipy.sparseのクラスからnumpy.ndarrayに変換\n",
+    "# toarray()メソッド\n",
     "print(csr.toarray())\n",
-    "print(type(csr.toarray()))\n",
-    "# numpy.matrixに変換される。\n",
-    "print(csr.todense())\n",
-    "print(type(csr.todense()))"
+    "print(type(csr.toarray()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "ba35bece",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 10, 20], [30, 0, 40], [0, 0, 0]]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# scipy.sparseのクラスからリストに変換\n",
+    "# tolist()\n",
+    "print(csr.toarray().tolist())\n",
+    "print(type(csr.toarray().tolist()))\n"
    ]
   },
   {
@@ -376,21 +438,88 @@
    "id": "e10e6a8e",
    "metadata": {},
    "source": [
-    "値、行、列のリストから生成"
+    "値、行、列のリストから生成\n",
+    "<br>\n",
+    "値、行、列のリストがそれぞれdata, row, column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "74a4c734",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0 10 20]\n",
+      " [30  0 40]\n",
+      " [ 0  0  0]]\n",
+      "<class 'numpy.matrix'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# scipy.sparseからnumpy.matrixに変換\n",
+    "# todense()\n",
+    "print(csr.todense())\n",
+    "print(type(csr.todense()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "173e47b6",
+   "metadata": {},
+   "source": [
+    "##### SciPyで疎行列を生成・変換(値、行、列のリストから生成)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "274eb4fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scipy.sparse\n",
+      "   (0, 1)\t10\n",
+      "  (0, 2)\t20\n",
+      "  (1, 0)\t30\n",
+      "  (1, 2)\t40\n",
+      "<class 'scipy.sparse.csr.csr_matrix'>\n",
+      "numpy.ndarray\n",
+      " [[ 0 10 20]\n",
+      " [30  0 40]]\n",
+      "<class 'numpy.ndarray'>\n",
+      "numpy.ndarrayで形状指定\n",
+      " [[ 0 10 20]\n",
+      " [30  0 40]\n",
+      " [ 0  0  0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 値、行、列のリストがそれぞれdata, row, column\n",
+    "data = [10, 20, 30, 40]\n",
+    "row = [0, 0, 1, 1]\n",
+    "col = [1, 2, 0, 2]\n",
+    "\n",
+    "print('scipy.sparse\\n', csr_matrix((data, (row, col))))\n",
+    "print(type(csr_matrix((data, (row, col)))))\n",
+    "print('numpy.ndarray\\n',csr_matrix((data, (row,col))).toarray())\n",
+    "print(type(csr_matrix((data, (row,col))).toarray()))\n",
+    "print('numpy.ndarrayで形状指定\\n', csr_matrix((data, (row, col)), shape=(3, 3)).toarray())\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e1f2bc5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74a4c734",
+   "id": "b07990df",
    "metadata": {},
    "outputs": [],
    "source": []
